--- a/Index.html
+++ b/Index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <script src="Script.js" defer></script>
         <link rel="stylesheet" href="Style.css">
+        <title>Hexwez</title>
     </head>
-    <body>
-        <center><h1>Website not done yet lol</h1></center>
+    <body class="MainBody">
+        <canvas id="canvas"></canvas>
+        <div class="container">
+            <img src="/mainpfp.gif" alt="Hexwez" class="ProfilePicture">
+            <h1 class="Text">Hexwez</h1>
+            <p class="Text">i do stuff or smth</p>
+            <div class="button-container">
+                <button id="Youtube"><span>Youtube</span></button>
+                <button id="Tiktok"><span>Tiktok</span></button>
+                <br><br>
+                <button id="Steam"><span>Steam</span></button>
+                <button id="Github"><span>Github</span></button>
+                <button id="Discord"><span>Discord</span></button>
+            </div>
+        </div>
     </body>
 </html>
