--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="Script.js" defer></script>
+        <!--<script src="Script.js" defer></script>-->
         <link rel="stylesheet" href="Style.css">
         <title>Hexwez</title>
     </head>
     <body class="MainBody">
-        <canvas id="canvas"></canvas>
+        <!--<canvas id="canvas"></canvas>-->
         <div class="container">
             <img src="/mainpfp.gif" alt="Hexwez" class="ProfilePicture">
             <h1 class="Text">Hexwez</h1>
