--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,12 @@
             <h1 class="Text">Hexwez</h1>
             <p class="Text">i do stuff or smth</p>
             <div class="button-container">
-                <button id="Youtube"><span>Youtube</span></button>
-                <button id="Tiktok"><span>Tiktok</span></button>
+                <button id="Youtube" onclick="window.location.href='https://www.youtube.com/@Hexwez_od';"><span>Youtube</span></button>
+                <button id="Tiktok" onclick="window.location.href='https://www.tiktok.com/@hexwez';"><span>Tiktok</span></button>
                 <br><br>
-                <button id="Steam"><span>Steam</span></button>
-                <button id="Github"><span>Github</span></button>
-                <button id="Discord"><span>Discord</span></button>
+                <button id="Steam" onclick="window.location.href='https://steamcommunity.com/profiles/76561198335004344';"><span>Steam</span></button>
+                <button id="Github" onclick="window.location.href='https://github.com/Hexwez';"><span>Github</span></button>
+                <button id="Discord" onclick="window.location.href='https://discord.com/users/462319737674661898';"><span>Discord</span></button>
             </div>
         </div>
     </body>
