--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--<script src="Script.js" defer></script>-->
-        <link rel="stylesheet" href="Style.css">
+        <link rel="stylesheet" href="style.css">
         <title>Hexwez</title>
     </head>
     <body class="MainBody">
