--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<script src="Script.js" defer></script>-->
+        <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="/mainpfp.gif" type="image/x-icon">
         <title>Hexwez</title>
     </head>
     <body class="MainBody">
-        <!--<canvas id="canvas"></canvas>-->
+        <canvas id="canvas"></canvas>
         <div class="container">
             <img src="/mainpfp.gif" alt="Hexwez" class="ProfilePicture">
             <h1 class="Text">Hexwez</h1>
             <p class="Text">i do stuff or smth</p>
             <div class="button-container">
-                <button id="Youtube" onclick="window.location.href='https://www.youtube.com/@Hexwez_od';"><span>Youtube</span></button>
-                <button id="Tiktok" onclick="window.location.href='https://www.tiktok.com/@hexwez';"><span>Tiktok</span></button>
+                <button id="Youtube"><span>Youtube</span></button>
+                <button id="Tiktok"><span>Tiktok</span></button>
                 <br><br>
-                <button id="Steam" onclick="window.location.href='https://steamcommunity.com/profiles/76561198335004344';"><span>Steam</span></button>
-                <button id="Github" onclick="window.location.href='https://github.com/Hexwez';"><span>Github</span></button>
-                <button id="Discord" onclick="window.location.href='https://discord.com/users/462319737674661898';"><span>Discord</span></button>
+                <button id="Steam"><span>Steam</span></button>
+                <button id="Github"><span>Github</span></button>
+                <button id="Discord"><span>Discord</span></button>
             </div>
         </div>
     </body>
