--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="script.js" defer></script>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="/mainpfp.gif" type="image/x-icon">
-        <title>Hexwez</title>
+        <title>Hexwez's site</title>
     </head>
     <body class="MainBody">
         <canvas id="canvas"></canvas>
